// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Date range  should render range descriptor when active 1`] = `
<div
  className="dateRange"
>
  <ListItem
    autoGenerateNestedIndicator={true}
    className="dateRangeCategory active"
    containerElement="span"
    disableKeyboardFocus={false}
    disabled={false}
    initiallyOpen={false}
    insetChildren={false}
    nestedItems={
      Array [
        <ListItem
          autoGenerateNestedIndicator={true}
          className="dateRangeLink active"
          containerElement="span"
          disableKeyboardFocus={false}
          disabled={false}
          initiallyOpen={false}
          insetChildren={false}
          leftIcon={
            <NavigationClose
              disabled={false}
            />
          }
          nestedItems={Array []}
          nestedLevel={0}
          onClick={[Function]}
          onKeyboardFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onNestedListToggle={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          open={null}
          primaryText="2010 - 2016"
          primaryTogglesNestedList={false}
          secondaryTextLines={1}
        />,
      ]
    }
    nestedLevel={0}
    onKeyboardFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onNestedListToggle={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    open={true}
    primaryText="Published year range"
    primaryTogglesNestedList={true}
    secondaryTextLines={1}
  />
</div>
`;

exports[`Date range  should render range selector disabled 1`] = `
<div
  className="dateRange"
>
  <ListItem
    autoGenerateNestedIndicator={true}
    className="dateRangeCategory disabled"
    containerElement="span"
    disableKeyboardFocus={false}
    disabled={true}
    initiallyOpen={false}
    insetChildren={false}
    nestedItems={
      Array [
        <ListItem
          autoGenerateNestedIndicator={true}
          className="dateRangeLink disabled"
          containerElement="span"
          disableKeyboardFocus={false}
          disabled={true}
          initiallyOpen={false}
          insetChildren={false}
          leftIcon={null}
          nestedItems={Array []}
          nestedLevel={0}
          onClick={[Function]}
          onKeyboardFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onNestedListToggle={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          open={null}
          primaryText=""
          primaryTogglesNestedList={false}
          secondaryTextLines={1}
        >
          <div
            className="yearPublished columns is-gapless"
          >
            <div
              className="dateRangeFrom column"
            >
              <TextField
                defaultValue={2010}
                disabled={false}
                floatingLabelFixed={false}
                floatingLabelText="From"
                fullWidth={true}
                multiLine={false}
                onChange={[Function]}
                rows={1}
                type="number"
                underlineShow={true}
              />
            </div>
            <div
              className="dateRangeSeparator column is-narrow"
            />
            <div
              className="dateRangeTo column"
            >
              <TextField
                defaultValue={2020}
                disabled={false}
                floatingLabelFixed={false}
                floatingLabelText="To"
                fullWidth={true}
                multiLine={false}
                onChange={[Function]}
                rows={1}
                type="number"
                underlineShow={true}
              />
            </div>
            <div
              className="dateRangeSeparator column is-narrow"
            />
            <div
              className="dateRangeGo column is-narrow"
            >
              <FlatButton
                className="is-mui-spacing-button"
                disabled={false}
                fullWidth={true}
                label="Go"
                labelPosition="after"
                labelStyle={Object {}}
                onClick={[Function]}
                onKeyboardFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onTouchStart={[Function]}
                primary={false}
                secondary={false}
              />
            </div>
          </div>
        </ListItem>,
      ]
    }
    nestedLevel={0}
    onKeyboardFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onNestedListToggle={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    open={null}
    primaryText="Published year range"
    primaryTogglesNestedList={true}
    secondaryTextLines={1}
  />
</div>
`;

exports[`Date range  should render range selector with default values populated 1`] = `
<div
  className="dateRange"
>
  <ListItem
    autoGenerateNestedIndicator={true}
    className="dateRangeCategory"
    containerElement="span"
    disableKeyboardFocus={false}
    disabled={false}
    initiallyOpen={false}
    insetChildren={false}
    nestedItems={
      Array [
        <ListItem
          autoGenerateNestedIndicator={true}
          className="dateRangeLink"
          containerElement="span"
          disableKeyboardFocus={false}
          disabled={false}
          initiallyOpen={false}
          insetChildren={false}
          leftIcon={null}
          nestedItems={Array []}
          nestedLevel={0}
          onClick={[Function]}
          onKeyboardFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onNestedListToggle={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          open={null}
          primaryText=""
          primaryTogglesNestedList={false}
          secondaryTextLines={1}
        >
          <div
            className="yearPublished columns is-gapless"
          >
            <div
              className="dateRangeFrom column"
            >
              <TextField
                defaultValue={2010}
                disabled={false}
                floatingLabelFixed={false}
                floatingLabelText="From"
                fullWidth={true}
                multiLine={false}
                onChange={[Function]}
                rows={1}
                type="number"
                underlineShow={true}
              />
            </div>
            <div
              className="dateRangeSeparator column is-narrow"
            />
            <div
              className="dateRangeTo column"
            >
              <TextField
                defaultValue={2020}
                disabled={false}
                floatingLabelFixed={false}
                floatingLabelText="To"
                fullWidth={true}
                multiLine={false}
                onChange={[Function]}
                rows={1}
                type="number"
                underlineShow={true}
              />
            </div>
            <div
              className="dateRangeSeparator column is-narrow"
            />
            <div
              className="dateRangeGo column is-narrow"
            >
              <FlatButton
                className="is-mui-spacing-button"
                disabled={false}
                fullWidth={true}
                label="Go"
                labelPosition="after"
                labelStyle={Object {}}
                onClick={[Function]}
                onKeyboardFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onTouchStart={[Function]}
                primary={false}
                secondary={false}
              />
            </div>
          </div>
        </ListItem>,
      ]
    }
    nestedLevel={0}
    onKeyboardFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onNestedListToggle={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    open={null}
    primaryText="Published year range"
    primaryTogglesNestedList={true}
    secondaryTextLines={1}
  />
</div>
`;
